libs/@local/hashql/ast/tests/ui/lower/special-form-expander/type-generic-absolute-path.jsonc
//@ run: fail
//@ description: An absolute path in generic position should be rejected
[
  "::kernel::special_form::type",
  "Foo<::foo::Bar>",
  //~^ ERROR Generic arguments must be simple identifiers
  { "#struct": { "foo": "Bar" } },
  "_"
]
